syntax = "proto3";

package chat.v1;

option go_package = "golang-social-media/pkg/gen/chat/v1;chatv1";

import "google/protobuf/timestamp.proto";

service ChatService {
  rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse);
}

message CreateMessageRequest {
  string sender_id = 1;
  string receiver_id = 2;
  string content = 3;
}

message Message {
  string id = 1;
  string sender_id = 2;
  string receiver_id = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateMessageResponse {
  Message message = 1;
}
